# c_compiler

./: CMakeLists.txt  README.md
cases/: e05.c
include/: ast.h
result/: e01.s  e01_exec  e02.s  e02_exec  e03.s  e03_exec  e04.s  e04_exec  e05.s  e05_exec  e06.s  e06_exec  e07.s  e07_exec  e08.s  e08_exec
src/: codegen.cpp  codegen.h  grammar.output  grammar.tab.c  grammar.y  lexer.l  main.cpp  symbol_table.cpp  symbol_table.h  utils.cpp  utils.h
